--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
-<div style="text-align:center">
+<div class="container">
     <h1>
      {{ title }}!
     </h1>
     <app-my-component></app-my-component>
+    
+
   </div>
   
   
