--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,9 @@
-<div class="container">
-    <h1>
-     {{ title }}!
-    </h1>
-    <app-my-component></app-my-component>
-    
-
-  </div>
+<div class="p-4">
+    <h1 style="font-size: 4em;"> {{ title }}! </h1>
+    <div class="container pt-5">
+      <app-my-component></app-my-component>
+    </div>
+</div>
   
   
   <!-- <router-outlet></router-outlet> -->
