--- a/src/app/show-card/show-card.component.html
+++ b/src/app/show-card/show-card.component.html
@@ -1,10 +1,10 @@
-<p>show-card works!</p>
+<h1> {{selectedBoardId.BoardName}} </h1>
+<!-- <div class="container d-flex flex-row justify-content-around"> -->
 
-<div class="container d-flex flex-row ">
-    <h1> {{selectedBoardId.BoardName}} </h1>
-    <div *ngFor="let card of cards">
-        <div class="">
-            <div class="card mb-3">
+<div class="container ">
+    <div *ngFor="let card of cards" class="row" >
+        <div class="col">
+            <div class="card mb-3 w-100">
                 <div class="card-body">
                     <h2 class="card-title">{{card.CardName}}</h2>
                     <h5 class="card-subtitle mb-2 text-muted"> {{card.CardStatus}} </h5>
@@ -15,9 +15,3 @@
         </div>
     </div>
 </div>
-
-<ul>
-    <li *ngFor="let card of cards">
-        {{card.CardName}}
-    </li>
-</ul>
