--- a/src/app/create-card/create-card.component.html
+++ b/src/app/create-card/create-card.component.html
@@ -1,50 +1,40 @@
-<div class="container p-3" style="border-radius: 10px; border: 1px solid black; background-color: whitesmoke;">
-    <form>
+<div class="container mt-5 p-3" style="border-radius: 10px; border: 1px solid black; background-color: whitesmoke;">
+    <form [formGroup]="checkoutForm" (ngSubmit)="onSubmit()">
         <div class="form-group row">
             <div class=" col-6">
                 <label for="cardName">Nom de la carte</label>
-                <input type="text" class="form-control" id="cardName" placeholder="nom de la carte">
+                <input type="text" class="form-control" id="cardName" placeholder="nom de la carte" formControlName="CardName">
             </div>
             <div class="col-6">
                 <label for="cardName">Status</label>
                 <div  class="pt-2">
                     <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+                        <input class="form-check-input" type="radio" name="CardStatus" id="inlineRadio1" value="TODO" formControlName="CardStatus">
                         <label class="form-check-label" for="inlineRadio1">TODO</label>
                       </div>
                       <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+                        <input class="form-check-input" type="radio" name="CardStatus" id="inlineRadio2" value="DOING" formControlName="CardStatus">
                         <label class="form-check-label" for="inlineRadio2">DOING</label>
                       </div>
                       <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3">
+                        <input class="form-check-input" type="radio" name="CardStatus" id="inlineRadio3" value="DONE" formControlName="CardStatus">
                         <label class="form-check-label" for="inlineRadio3">DONE</label>
                       </div>
                 </div>
             </div>
         </div>
         <div class="form-group pt-3">
-            <label for="example-date-input" class="col-2 col-form-label">Date</label>
-            <input class="form-control" type="date" id="example-date-input">
+            <label for="example-date-input" class="col-2 col-form-label">Date de fin</label>
+            <input class="form-control" type="date" id="example-date-input" formControlName="CardEndDate">
         </div>
         <div class="form-group pt-3">
             <label for="cardNote">Note </label>
-            <textarea class="form-control" id="cardNote" rows="3"></textarea>
+            <textarea class="form-control" id="cardNote" rows="3" formControlName="CardNote"></textarea>
         </div>
         <div class="form-row pt-3">
             <div class="form-group col-md-4">
                 <label for="inputState">Tableau</label>
-                <select id="inputState" class="form-control">
-                    <option selected>{{myBoard}}</option>
-                    <option>...</option>
-                </select>
-            </div>
-            <div class="form-group col-md-4 pt-3">
-                <label for="inputState">Utilisateur</label>
-                <select id="inputState" class="form-control">
-                    <option selected>Choose...</option>
-                    <option>...</option>
-                </select>
+                <input class="form-control" type="text" placeholder={{myBoardid}} value="{{myBoardid}}">
             </div>
         </div>
         <div class="pt-3">
