--- a/src/app/show-card/show-card.component.html
+++ b/src/app/show-card/show-card.component.html
@@ -1,7 +1,5 @@
-<h1> {{selectedBoardId.BoardName}} </h1>
-<!-- <div class="container d-flex flex-row justify-content-around"> -->
-
-<div class="container ">
+<div class="container mt-3">
+    <h1> {{selectedBoardId.BoardName}} </h1>
     <div *ngFor="let card of cards" class="row" >
         <div class="col">
             <div class="card mb-3 w-100">
@@ -14,4 +12,5 @@
             </div>
         </div>
     </div>
+    <button (click)="creatCard()" class="btn btn-primary" style="color: white;" type="button">Créer une carte pour ce tableau </button>
 </div>
