--- a/src/app/my-component/my-component.component.html
+++ b/src/app/my-component/my-component.component.html
@@ -1,14 +1,38 @@
 <div class="container mt-5">
-    <div class="input-group mb-3">
-        <select [(ngModel)]="selectedBoardId" class="custom-select" id="inputGroupSelect04" aria-label="Example select with button addon" style="width: 25%;">
-            <option [ngValue]="board" *ngFor="let board of boards">{{board.BoardName}}</option>
-        </select>
-        <div class="input-group-append px-2">
-            <button (click)="onClickGo()" class="btn btn-outline-secondary" type="button">Affichez les cartes</button>
+    <div class="row">
+        <div class="col-9 mb-3">
+            <h2 style="font-size: 1.5em;">Choix du tableau :</h2>
+            <div class="input-group w-100 justify-content-center">
+                <select [(ngModel)]="selectedBoardId" class="custom-select" id="inputGroupSelect04"
+                    aria-label="Example select with button addon" style="width: 50%;">
+                    <option [ngValue]="board" *ngFor="let board of boards">{{board.BoardName}}</option>
+                </select>
+                <div class="input-group-append px-2">
+                    <button (click)="onClickGo()" class="btn btn-outline-secondary" type="button">Affichez les
+                        cartes</button>
+                </div>
+            </div>
+
+            <div *ngIf="selectedBoardId">
+                <app-show-card [board]="selectedBoardId" [card]="cards"></app-show-card>
+            </div>
+        </div>
+        <div class="col-3">
+            <h2 style="font-size: 1.5em;">Liste des utilisateurs :</h2>
+            <div class="card mb-2" style="width: auto;" *ngFor="let user of users">
+                <ul class="list-group list-group-flush ">
+                    <li class="list-group-item capitelize">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                            class="bi bi-file-earmark-person" viewBox="0 0 16 16">
+                            <path d="M11 8a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" />
+                            <path
+                                d="M14 14V4.5L9.5 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2zM9.5 3A1.5 1.5 0 0 0 11 4.5h2v9.255S12 12 8 12s-5 1.755-5 1.755V2a1 1 0 0 1 1-1h5.5v2z" />
+                        </svg>
+                        {{user.name}}
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
-    
-    <div *ngIf="selectedBoardId">
-        <app-show-card [board]="selectedBoardId" [card]="cards"></app-show-card>
-    </div>
+
 </div>
