--- a/src/app/create-card/create-card.component.html
+++ b/src/app/create-card/create-card.component.html
@@ -3,23 +3,27 @@
         <div class="form-group row">
             <div class=" col-6">
                 <label for="cardName">Nom de la carte</label>
-                <input type="text" class="form-control" id="cardName" placeholder="nom de la carte" formControlName="CardName">
+                <input type="text" class="form-control" id="cardName" placeholder="nom de la carte"
+                    formControlName="CardName">
             </div>
             <div class="col-6">
                 <label for="cardName">Status</label>
-                <div  class="pt-2">
+                <div class="pt-2">
                     <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="CardStatus" id="inlineRadio1" value="TODO" formControlName="CardStatus">
+                        <input class="form-check-input" type="radio" name="CardStatus" id="inlineRadio1" value="TODO"
+                            formControlName="CardStatus">
                         <label class="form-check-label" for="inlineRadio1">TODO</label>
-                      </div>
-                      <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="CardStatus" id="inlineRadio2" value="DOING" formControlName="CardStatus">
+                    </div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="CardStatus" id="inlineRadio2" value="DOING"
+                            formControlName="CardStatus">
                         <label class="form-check-label" for="inlineRadio2">DOING</label>
-                      </div>
-                      <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="CardStatus" id="inlineRadio3" value="DONE" formControlName="CardStatus">
+                    </div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="CardStatus" id="inlineRadio3" value="DONE"
+                            formControlName="CardStatus">
                         <label class="form-check-label" for="inlineRadio3">DONE</label>
-                      </div>
+                    </div>
                 </div>
             </div>
         </div>
